Update 7.02 Conduct logging and monitoring activities.md

--- a/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
+++ b/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
@@ -582,7 +582,7 @@ The most common types of Threat Intelligence are:
 
 :necktie: Without a clear understanding of why threat intelligence matters, even the best tools become just noise generators. Intelligence lets you move from reactive to proactive.
 
-If threat intelligence is the weather forecast, threat feeds are the meteorological data streams feeding that forecast. A threat feed provides continuous updates on threats, often in an automated way.
+If threat intelligence is the weather forecast, **threat feeds** are the meteorological data streams feeding that forecast. A threat feed provides continuous updates on threats, often in an automated way.
 
 Examples of threat feeds include:
 
@@ -605,15 +605,15 @@ However, not all feeds are created equal. Some are curated by cybersecurity expe
 **Threat hunting** flips the traditional defensive model on its head. Instead of waiting for alerts, hunters proactively look for signs of threats that might have evaded detection. It's like sending scouts beyond your castle walls, looking for footprints and broken branches instead of waiting for the enemy to break down the gate.
 
 Threat hunting combines:
-- Hypothesis-driven investigation (e.g., "What if a threat actor already compromised an internal host?")
-- Advanced analytics (user behavior analytics, anomaly detection)
+- Hypothesis-driven investigation (e.g., "What if a threat actor already compromised an internal host?").
+- Advanced analytics (user behavior analytics, anomaly detection).
 - Human intuition and experience.
 
 Hunters look for:
-- Lateral movement inside the network
-- Use of stolen credentials
-- Persistence mechanisms like rogue scheduled tasks
-- Signs of data exfiltration
+- Lateral movement inside the network.
+- Use of stolen credentials.
+- Persistence mechanisms like rogue scheduled tasks.
+- Signs of data exfiltration.
 
 | Hunting Technique       | Description                                              |
 |--------------------------|----------------------------------------------------------|
@@ -624,10 +624,38 @@ Hunters look for:
 
 :necktie: Threat hunting is about assumption busting. It starts where automated systems end.
 
-**SOAR** is a suite of technologies designed to automate and orchestrate security tasks, enabling security operations centers (SOCs) to respond to threats more efficiently. It brings together three key elements: Orchestration, Automation, and Response. Let’s break this down:
-- Orchestration refers to the process of coordinating various security tools and processes within the organization. Imagine a conductor leading an orchestra—different instruments (or in this case, security tools) play in harmony to create a seamless security operation.
-- Automation is the magic that takes mundane, repetitive tasks out of the hands of human analysts. For example, if a malicious IP address is detected, a SOAR system can automatically block it across the network without requiring manual intervention, speeding up the process and reducing human error.
-- Response is the ability to handle incidents in real-time by executing predefined playbooks. These playbooks outline step-by-step instructions for responding to specific threats, ensuring consistency and quick execution, regardless of which analyst is on shift.
+```mermaid
+
+graph LR
+    A[Threat Intelligence] --> B[Threat Feeds]
+    A --> C[Threat Hunting]
+    
+    A:::main --> D[Goal: Understand adversaries and their methods]
+    B:::feed --> E[Collection of data about threats such as IPs, hashes, domains]
+    C:::hunt --> F[Proactive search for undetected threats in the environment]
+
+    B --> G[Used by SIEMs, IDS, IPS, Firewalls for automatic detection]
+    C --> H[Relies on threat intelligence to form hypotheses and identify patterns]
+
+    classDef main fill:#555,stroke:#000,stroke-width:2px,color:#fff
+    classDef feed fill:#777,stroke:#333,stroke-width:1px,color:#fff
+    classDef hunt fill:#999,stroke:#444,stroke-width:1px,color:#fff
+
+    style D fill:#ddd,stroke:#555,color:#000
+    style E fill:#eee,stroke:#777,color:#000
+    style F fill:#eee,stroke:#999,color:#000
+    style G fill:#f2f2f2,stroke:#888,color:#000
+    style H fill:#f2f2f2,stroke:#aaa,color:#000
+
+
+```
+
+
+
+**SOAR** is a suite of technologies designed to automate and orchestrate security tasks, enabling security operations centers (SOCs) to respond to threats more efficiently. It brings together three key elements: Orchestration, Automation, and Response.
+- **Orchestration** refers to the process of coordinating various security tools and processes within the organization. Imagine a conductor leading an orchestra—different instruments (or in this case, security tools) play in harmony to create a seamless security operation.
+- **Automation** is the magic that takes mundane, repetitive tasks out of the hands of human analysts. For example, if a malicious IP address is detected, a SOAR system can automatically block it across the network without requiring manual intervention, speeding up the process and reducing human error.
+- **Response** is the ability to handle incidents in real-time by executing predefined playbooks. These playbooks outline step-by-step instructions for responding to specific threats, ensuring consistency and quick execution, regardless of which analyst is on shift.
 
 As the number of cyberattacks grows and becomes more sophisticated, security teams struggle to keep up. There’s simply too much data and too many threats to analyze manually, let alone respond to. This is where SOAR comes in. By automating routine processes and orchestrating tools, SOAR significantly reduces the time to detect, respond, and remediate threats. Instead of security professionals drowning in alerts, they can focus on high-value tasks like threat hunting or strategic decision-making.
 
@@ -691,7 +719,28 @@ The Process of UEBA Implementation is basically made of 5 steps:
 4. **Anomaly Detection:** Once these profiles are in place, the UEBA system continuously monitors activity across the network in real-time. If a user or entity performs an action that deviates significantly from their established pattern—say, accessing sensitive files they typically don’t interact with or initiating a large data transfer—an alert is triggered.
 5. **Alert and Response:** When an anomaly is detected, the system generates an alert that is prioritized based on the severity of the behavior. Security analysts are then able to investigate the alert, determine whether it indicates a legitimate threat, and take appropriate action. For example, if the anomaly is benign (e.g., a legitimate employee working late from a new location), the alert may be closed. However, if the anomaly suggests malicious activity, such as an attempted data breach, the response might involve further investigation, blocking access, or notifying the relevant stakeholders.
 
-UEBA adds tremendous value to an organization’s security posture by shifting the focus away from just detecting known threats to identifying potential zero-day exploits, insider threats, and compromised accounts. Some of the key areas where UEBA excels include:
+```mermaid
+flowchart LR
+    A[1. Data Collection] --> B[2. Data Normalization]
+    B --> C[3. Behavior Profiling]
+    C --> D[4. Anomaly Detection]
+    D --> E[5. Alert and Response]
+
+    A:::step --> A1[Gather logs, network traffic, authentication data and device behavior]
+    B:::step --> B1[Clean and standardize data for consistent analysis]
+    C:::step --> C1[Build user and entity profiles from historical normal behavior]
+    D:::step --> D1[Monitor for deviations from normal patterns in real time]
+    E:::step --> E1[Trigger alerts and allow analysts to investigate and respond]
+
+    classDef step fill:#999,stroke:#333,stroke-width:1px,color:#fff
+    style A1 fill:#eee,stroke:#666,color:#000
+    style B1 fill:#eee,stroke:#666,color:#000
+    style C1 fill:#eee,stroke:#666,color:#000
+    style D1 fill:#eee,stroke:#666,color:#000
+    style E1 fill:#eee,stroke:#666,color:#000
+```
+
+UEBA adds value to an organization’s security posture by shifting the focus away from just detecting known threats to identifying potential zero-day exploits, insider threats, and compromised accounts. Some of the key areas where UEBA excels include:
 
 | Use Case                     | Description |
 |-------------------------------|-------------|
