Update 7.03 Perform Configuration Management (CM) (e.g., provisioning, baselining, automation).md

--- a/DOMAIN7: Security Operations/7.03 Perform Configuration Management (CM) (e.g., provisioning, baselining, automation).md
+++ b/DOMAIN7: Security Operations/7.03 Perform Configuration Management (CM) (e.g., provisioning, baselining, automation).md
@@ -1,7 +1,7 @@
 ## 7.3 Perform Configuration Management (CM) (e.g., provisioning, baselining, automation) ##
 
 In cybersecurity and IT management, change is inevitable — but chaos must never be.
-Configuration management is the discipline that keeps us anchored amid constant evolution.
+Configuration management is the discipline that keeps us anchored to constant evolution.
 Without it, even the strongest security measures can be eroded by drift, inconsistency, and human error. 
 
 In configuration management, each critical element of our systems is called a **Configuration Item (CI)**.
@@ -14,7 +14,7 @@ A CI can be:
 - A firewall rule
 - A document, like a system configuration guide
 
-If you don’t know what pieces you have, you can't secure them, update them, or replace them correctly.
+:necktie: If you don’t know what pieces you have, you can't secure them, update them, or replace them correctly.
 
 :necktie: Tracking CIs helps avoid surprises when systems fail or are attacked — because you already know exactly what you're protecting.
 
@@ -28,7 +28,42 @@ A CMP ensures every adjustment is documented, tested, and deliberate — not jus
 
 :necktie: The CMP supports traceability, auditability, and control — three core pillars of secure environments.
 
-Provisioning is the act of setting up IT resources — servers, user accounts, cloud instances — according to predefined standards. Imagine provisioning like opening a new restaurant:
+```mermaid
+
+flowchart TD
+    A[Configuration Management]:::main --> B[Configuration Items]:::mid
+    A --> C[Configuration Management Plan]:::mid
+    A --> D[Security and Control Benefits]:::mid
+
+    %% Configuration Items
+    B --> B1[Servers]:::detail
+    B --> B2[Network switches]:::detail
+    B --> B3[Databases and applications]:::detail
+    B --> B4[Firewall rules]:::detail
+    B --> B5[Configuration documents]:::detail
+
+    %% Configuration Management Plan
+    C --> C1[Defines which CIs are included]:::detail
+    C --> C2[Describes change review and approval process]:::detail
+    C --> C3[Establishes baselines and version control]:::detail
+    C --> C4[Keeps records accurate and up to date]:::detail
+
+    %% Benefits
+    D --> D1[Ensures traceability of every change]:::detail
+    D --> D2[Supports auditability and accountability]:::detail
+    D --> D3[Prevents unauthorized or quick modifications]:::detail
+    D --> D4[Maintains stability during constant evolution]:::detail
+
+    %% Styles
+    classDef main fill:#444,stroke:#000,stroke-width:2px,color:#fff
+    classDef mid fill:#777,stroke:#333,stroke-width:1px,color:#fff
+    classDef detail fill:#eee,stroke:#555,stroke-width:1px,color:#000
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+**Provisioning** is the act of setting up IT resources — servers, user accounts, cloud instances — according to predefined standards. Imagine provisioning like opening a new restaurant:
 You don't just let chefs bring whatever ingredients they like; you give them an approved supplier list to maintain food safety and quality.
 
 Provisioning ensures systems:
@@ -44,7 +79,7 @@ With **Infrastructure as Code (IaC)**, we define our infrastructure in files (li
 
 :bulb: IaC standardizes environments, speeds up recovery after incidents, and automates security controls from the ground up.
 
-Configuration management can't happen without a reliable, real-time asset inventory. Imagine being a medieval castle defender — but you don’t know where all the walls are. You can’t defend what you can’t see.
+Configuration management can't happen without a reliable, real-time asset inventory.
 
 In cybersecurity, asset inventories tell you:
 - What devices are active
@@ -60,7 +95,7 @@ Baselines allow:
 - Easier audits
 - Consistent deployment across environments
 
-:bulb: Images, like system snapshots or gold master images, serve as baselines by capturing a secure, fully configured state of a machine. They can be quickly deployed to provision new systems consistently, ensuring all devices start from a trusted, hardened configuration. This helps maintain security standards and speeds up recovery if a system needs to be rebuilt.
+:bulb: Images, like **system snapshots** or **gold master images**, serve as baselines by capturing a secure, fully configured state of a machine. They can be quickly deployed to provision new systems consistently, ensuring all devices start from a trusted, hardened configuration. This helps maintain security standards and speeds up recovery if a system needs to be rebuilt.
 
 Finally, the magic ingredient: **Automation**. Automation in configuration management isn't about replacing humans — it's about removing human error from repetitive, critical tasks.
 
