--- a/DOMAIN7: Security Operations/7.04 Apply foundational security operations concepts.md
+++ b/DOMAIN7: Security Operations/7.04 Apply foundational security operations concepts.md
@@ -8,7 +8,7 @@ Imagine you’re building a high-security vault. Not everyone needs the combinat
 
 Both principles work together. They create a layered defense where users have access to what they must have, not what they could want. Why? Because insiders are responsible for a massive percentage of breaches, whether intentionally or accidentally. A curious employee, a compromised account, or a disgruntled admin can do devastating damage — unless we architect our environments smartly.
 
-Need to know originally comes from the military. Think of wartime spies: if captured, the less they know, the less they can reveal. In cybersecurity, information is power — but also a liability if mishandled.
+:bulb: Need to know originally comes from the military. Think of wartime spies: if captured, the less they know, the less they can reveal. In cybersecurity, information is power — but also a liability if mishandled.
 
 :necktie: Someone could have the highest clearance in the organization, but if their duties don’t require access to a particular project, they should be denied access.
 
@@ -16,7 +16,7 @@ For example:
 - A database administrator may have full access to database structures but should not automatically view sensitive HR salary data.
 - A security analyst monitoring network traffic doesn’t need access to encrypted customer financial records.
 
-Need to know is dynamic — it can change based on current roles and current projects. That’s why access reviews and role re-certifications are critical operational tasks.
+**Need to know is dynamic** — it can change based on current roles and current projects. That’s why access reviews and role re-certifications are critical operational tasks.
 
 :necktie:  If "need to know" is about what information you access, "least privilege" is about what powers you are granted.
 
@@ -38,7 +38,7 @@ Example:
 - Only one of them has a "need to know" regarding a covert research project.
 - Therefore, only one is authorized to access that data.
 
-Security clearance ensures the right kind of people are working with sensitive material. Need to know and least privilege ensure those people only access what they truly require.
+:brain: Security clearance ensures the right kind of people are working with sensitive material. Need to know and least privilege ensure those people only access what they truly require.
 
 ### Open Questions ###
 
@@ -109,6 +109,8 @@ Monitoring administrative activities provides traceability and accountability. I
 Segregation of Duties (SoD) is the practice that stops any single individual from having unchecked power or control over critical processes. It’s a security philosophy rooted in an understanding of human nature: mistakes happen, temptations arise, and nobody should be in a position to harm an organization — intentionally or accidentally — without others noticing.
 
 :necktie: SoD ensures no single person can both commit and conceal errors, fraud, or sabotage. It’s about building a resilient organization, not one vulnerable to a single point of failure.
+
+:link: Refer also to [1.8.2 Employment agreements and policy driven requirements](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/a8d453db282000a542608ae786feeb63070f6bde/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.08%20Contribute%20to%20and%20enforce%20personnel%20security%20policies%20and%20procedures.md#182-employment-agreements-and-policy-driven-requirements)
 
 **Two-person control** (sometimes called dual control) is exactly what it sounds like: two qualified individuals must work together to complete a sensitive action.
 Think of launching a nuclear missile. Movies often show two officers turning keys at the same time — a vivid example of two-person control. No single individual, no matter how loyal or competent, should have the ability to unleash something that important alone.
