--- a/DOMAIN7: Security Operations/7.04 Apply foundational security operations concepts.md
+++ b/DOMAIN7: Security Operations/7.04 Apply foundational security operations concepts.md
@@ -219,6 +219,24 @@ Privileged accounts come in many flavors:
 
 Each type is a high-value target for attackers — and often a weak link if left unmanaged.
 
+```mermaid
+flowchart LR
+    classDef greyNode fill:#f2f2f2,stroke:#666,color:#333;
+    classDef greyArrow stroke:#666;
+
+    A[Privileged Account Management - PAM]:::greyNode --> B[Controls, monitors, secures, audits privileged accounts]:::greyNode
+    A --> C[High-value targets: admin, root, service, domain accounts]:::greyNode
+
+    subgraph AccountTypes [Privileged Account Types]
+        D[Administrator accounts]:::greyNode -->|Full system/data access| C
+        E[Service accounts]:::greyNode -->|Run apps; often unmanaged| C
+        F[Root accounts]:::greyNode -->|Unlimited system power| C
+        G[Domain Admin accounts]:::greyNode -->|Control entire AD environment| C
+    end
+
+```
+
+
 Effective PAM isn't just about passwords; it’s about principles and practices that reduce risk.
 
 The principle of least privilege means giving users the minimum level of access they need to perform their job — no more, no less.
