Update 8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md

--- a/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
+++ b/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
@@ -28,6 +28,59 @@ Now imagine taking Agile and stretching it over a large enterprise with hundreds
 
 **DevSecOps** is not just DevOps with a security team glued on. It’s the cultural and technical practice of integrating security at every stage of the DevOps pipeline. Imagine embedding security scanners into the conveyor belt—tools that check for known vulnerabilities, enforce coding standards, and validate configuration policies automatically and at scale. DevSecOps transforms security from a gatekeeper into a guide. Instead of stopping the line to conduct audits, we empower developers to detect and fix issues early. From a CISSP perspective, DevSecOps exemplifies “shift left” security—moving controls and assurance earlier in the process. Tools like SAST (static application security testing), DAST (dynamic testing), and IaC (infrastructure as code) scanning are your allies here. But the tools are only part of the equation. You also need the right culture—where developers view security as part of quality, not a tax. 
 
+```mermaid
+
+flowchart LR
+  A["🏗️ Development Methodologies & Security Awareness"]:::title --> B["Waterfall Model"]:::node
+  A --> C["Agile & Scrum"]:::node
+  A --> D["Scaled Agile Framework (SAFe)"]:::node
+  A --> E["Spiral Model"]:::node
+  A --> F["DevOps & DevSecOps"]:::node
+
+  %% Waterfall
+  B --> B1["Sequential Phases: Requirements → Design → Implementation → Testing → Deployment → Maintenance"]:::text
+  B --> B2["🧠 Like pouring concrete — hard to change once set"]:::text
+  B --> B3["Best for regulated environments needing traceability"]:::text
+  B --> B4["Security must be defined upfront — late changes are costly"]:::alert
+
+  %% Agile & Scrum
+  C --> C1["Iterative development — build one 'room' at a time"]:::text
+  C --> C2["💡 Agile Manifesto born at Snowbird, 2001"]:::text
+  C --> C3["Fast and flexible but can neglect security under time pressure"]:::alert
+  C --> C4["Introduce Security Champions and integrate secure coding & threat modeling into each sprint"]:::good
+  C --> C5["Scrum: short sprints, collaboration, defined roles, daily stand-ups"]:::text
+
+  %% SAFe
+  D --> D1["Agile at scale — many teams aligned like a fleet of boats"]:::text
+  D --> D2["Requires governance, automation, and consistent security standards"]:::alert
+  D --> D3["Security architecture ensures enterprise-wide resilience and compliance"]:::good
+  D --> D4["Think: secure backlog grooming → enterprise risk assessments"]:::good
+
+  %% Spiral
+  E --> E1["Hybrid model combining Waterfall + Iteration with risk focus"]:::text
+  E --> E2["Each loop includes planning, risk analysis, engineering, evaluation"]:::text
+  E --> E3["🌀 Risk is the core driver — proactive security mindset"]:::good
+  E --> E4["Ideal for high-stakes systems like defense projects"]:::text
+
+  %% DevOps / DevSecOps
+  F --> F1["Continuous integration & delivery — code on a moving conveyor belt"]:::text
+  F --> F2["Without security, vulnerabilities roll straight into production"]:::alert
+  F --> F3["DevSecOps embeds scanners & policies directly into the pipeline"]:::good
+  F --> F4["Shift-left mindset: detect & fix early, automate compliance checks"]:::good
+  F --> F5["Culture shift — developers see security as part of quality"]:::text
+
+  %% Styles
+  classDef title fill:#eee,stroke:#444,stroke-width:1px,color:#111,font-weight:bold;
+  classDef node fill:#ccc,stroke:#333,stroke-width:1px,color:#000;
+  classDef text fill:#f8f8f8,stroke:#999,stroke-width:0.5px,color:#000,font-size:12px;
+  classDef alert fill:#999,stroke:#444,stroke-width:1px,color:#fff,font-weight:bold;
+  classDef good fill:#ddd,stroke:#333,stroke-width:1px,color:#000,font-weight:bold;
+
+
+
+```
+
+
 ### Open Questions ###
 
 1.1Why is it challenging to introduce security controls late in the Waterfall development model?
