Update 8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md

--- a/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
+++ b/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
@@ -8,19 +8,19 @@ The **Waterfall model** is the oldest and, in many ways, the most rigid. It oper
 
 Waterfall offers predictability and clear documentation, which is great for environments like government contracts or medical systems where regulations demand traceability. But its biggest flaw is inflexibility. Imagine discovering a critical security vulnerability in the testing phase. Now you're stuck trying to bolt a lock onto a door that's already built and installed. Waterfall’s primary security implication is the cost and difficulty of late-stage changes. Security requirements must be exhaustively defined upfront, and any missed requirement can turn into an architectural flaw. Waterfall works best when security teams are involved from day one and have a seat at every design review.
 
-Agile, by contrast, is like building a house one room at a time with constant input from the owner. It’s iterative, meaning you develop small pieces of functionality (called user stories) over short cycles called sprints, typically 2-4 weeks. 
+**Agile**, by contrast, is like building a house one room at a time with constant input from the owner. It’s iterative, meaning you develop small pieces of functionality (called user stories) over short cycles called sprints, typically 2-4 weeks. 
 
 :link: On February 11-13, 2001, at The Lodge at Snowbird ski resort in the Wasatch mountains of Utah, seventeen people met to talk, ski, relax, and try to find common ground—and of course, to eat. What emerged was the [Agile ‘Software Development’ Manifesto](https://agilemanifesto.org/)
 
 Agile’s strength is responsiveness. If a customer changes their mind mid-project, you can adapt. But this speed and flexibility can cut both ways. Security, if not baked into every sprint, becomes an afterthought. 
 
-:bulb: A common Agile pitfall is developers rushing to finish a sprint without considering threats or compliance needs. To combat this, many organizations introduce a “security champion” into each Agile team—someone with enough knowledge to raise a red flag when security is at risk.
+:bulb: A common Agile pitfall is developers rushing to finish a sprint without considering threats or compliance needs. To combat this, many organizations introduce a **security champion** into each Agile team—someone with enough knowledge to raise a red flag when security is at risk.
 
 Agile offers a golden opportunity to integrate security continuously, rather than episodically. Think of secure coding practices, static analysis tools, and lightweight threat modeling as tools that fit naturally into each sprint. When well-implemented, Agile can often lead to more secure outcomes than Waterfall—because you catch issues early and often.
 
-**Scrum** is a known Agile framework that structures work in short, time-boxed iterations called sprints—usually 2 to 4 weeks long—where teams deliver potentially shippable product increments. It emphasizes collaboration, adaptability, and continuous feedback through defined roles (Product Owner, Scrum Master, Development Team) and ceremonies like daily stand-ups, sprint planning, reviews, and retrospectives. Scrum helps teams respond quickly to changing requirements while maintaining focus on delivering value.
+**Scrum** is a known Agile framework that structures work in short, time-boxed iterations called **sprints** —usually 2 to 4 weeks long— where teams deliver potentially shippable product increments. It emphasizes collaboration, adaptability, and continuous feedback through defined roles (Product Owner, Scrum Master, Development Team) and ceremonies like daily stand-ups, sprint planning, reviews, and retrospectives. Scrum helps teams respond quickly to changing requirements while maintaining focus on delivering value.
 
-Now imagine taking Agile and stretching it over a large enterprise with hundreds of developers. That’s where **Scaled Agile Framework, or SAFe**, comes in. SAFe isn’t a different methodology but an extension of Agile that enables coordination across many teams working toward a common goal. Think of it like managing a fleet of Agile boats all navigating in the same direction. SAFe introduces roles like Release Train Engineer and emphasizes alignment between business strategy and technical execution. For cybersecurity, the challenge is scaling your influence across all those boats. You need governance models, security standards, and automation that don’t just live in a binder—they must be embedded in every development value stream. This is where security architecture becomes crucial. You’re no longer just asking, “Is this code secure?” You’re asking, “Is our system of systems resilient, compliant, and threat-aware across all layers and integrations?” For the exam, understand SAFe’s layered complexity and how security must be equally layered—from secure backlog grooming to enterprise-level risk assessments.
+Now imagine taking Agile and stretching it over a large enterprise with hundreds of developers. That’s where **Scaled Agile Framework, or SAFe**, comes in. SAFe isn’t a different methodology but an extension of Agile that enables coordination across many teams working toward a common goal. Think of it like managing a fleet of Agile boats all navigating in the same direction. SAFe introduces roles like Release Train Engineer and emphasizes alignment between business strategy and technical execution. For cybersecurity, the challenge is scaling your influence across all those boats. You need governance models, security standards, and automation that don’t just live in a binder—they must be embedded in every development value stream. This is where security architecture becomes crucial. You’re no longer just asking, “*Is this code secure?*” You’re asking, “*Is our system of systems resilient, compliant, and threat-aware across all layers and integrations?*” For the exam, understand SAFe’s layered complexity and how security must be equally layered—from secure backlog grooming to enterprise-level risk assessments.
 
 **Spiral** is less commonly used today, but it’s still important conceptually. Think of it as a hybrid of Waterfall and iterative development with a focus on risk. Projects move through repeated cycles—or spirals—each with planning, risk analysis, engineering, and evaluation. It’s like walking around a mountain in ascending circles; each loop brings you higher but also exposes you to new risks. Spiral is most useful for large, high-stakes systems like defense applications, where the cost of failure is huge. What sets Spiral apart is that risk assessment isn’t just a checkpoint; it’s the core driver of each iteration. From a security standpoint, Spiral’s biggest advantage is the formal integration of risk analysis throughout the lifecycle. Spiral forces you to consider: What could go wrong? What is the impact? How do we mitigate it before we go further? Spiral’s security mindset is proactive, not reactive, and that makes it an excellent conceptual fit for systems with long timelines and high assurance requirements.
 
