Update 8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md

--- a/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
+++ b/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
@@ -137,9 +137,41 @@ Let’s start with the Capability Maturity Model, originally developed by the So
 
 For example, an organization at Level 1 may respond to a breach with panic and confusion, while a Level 4 or 5 organization will already have a playbook and monitoring in place, likely preventing the breach before it happens or containing it quickly. CMM gives us a language and framework for discussing process maturity, but it's general-purpose. 
 
-The **Software Assurance Maturity Model, or SAMM**, is purpose-built for secure software development. Created by OWASP, it’s specifically designed to help organizations evaluate and improve their software security posture. Where CMM gives you a broad maturity picture, SAMM dives deep into software assurance practices. SAMM is organized into four business functions—Governance, Construction, Verification, and Deployment—and each of those functions contains three security practices. For instance, in Governance, you’ll find practices like Strategy & Metrics, Policy & Compliance, and Education & Guidance. SAMM is modular and allows organizations to assess themselves in each of these areas across five maturity levels, where each level builds on the previous one with increasing sophistication. Imagine you're managing a development team. If you’re at Level 1 in Education & Guidance, maybe you have some developers with basic security awareness. At Level 2, you’re running regular secure coding workshops. At Level 3, you’ve embedded security champions in every Agile team and are tracking their influence on reduced vulnerabilities. The benefit of SAMM is that it’s practical—it doesn’t just say “you should be secure,” it shows you how to get there and what progress looks like. Unlike general maturity models, SAMM speaks the language of developers, product managers, and CISOs alike.
+The **Software Assurance Maturity Model, or SAMM**, is purpose-built for secure software development. Created by OWASP, it’s specifically designed to help organizations evaluate and improve their software security posture. Where CMM gives you a broad maturity picture, SAMM dives deep into software assurance practices. 
 
-Now, let’s talk about the Ideal Model, which comes from the Carnegie Mellon Software Engineering Institute just like CMM. **IDEAL** is an acronym that stands for Initiating, Diagnosing, Establishing, Acting, and Learning. Rather than being a static model that describes levels of maturity, the Ideal Model is more like a lifecycle or road map for improvement initiatives. You use it when you're launching a new security program or when you're trying to change something broken. In the Initiating phase, you identify the need for improvement and secure sponsorship. Think of a CISO making the case to the board that security maturity needs to increase to meet industry compliance. The Diagnosing phase is all about understanding the current state. This might involve running assessments, vulnerability scans, penetration tests, and stakeholder interviews. In Establishing, you define the future state and create a plan to get there—this is your security roadmap. Then, in Acting, you execute the plan. This includes implementing new policies, acquiring new tools, training staff, and changing behaviors. Finally, in the Learning phase, you reflect on what worked, what didn’t, and use that feedback to start the cycle again. IDEAL isn’t a scoring system like CMM or SAMM—it’s a method for driving meaningful change. That makes it especially useful in environments where security has been neglected or fragmented. It’s also a favorite of consultants because it provides structure to transformation efforts.
+SAMM is organized into four business functions:
+
+- Governance
+
+- Construction
+
+- Verification
+
+- Deployment
+
+each of those functions contains three security practices. For instance, in Governance, you’ll find practices like Strategy & Metrics, Policy & Compliance, and Education & Guidance. SAMM is modular and allows organizations to assess themselves in each of these areas across five maturity levels, where each level builds on the previous one with increasing sophistication. Imagine you're managing a development team. If you’re at Level 1 in Education & Guidance, maybe you have some developers with basic security awareness. At Level 2, you’re running regular secure coding workshops. At Level 3, you’ve embedded security champions in every Agile team and are tracking their influence on reduced vulnerabilities. The benefit of SAMM is that it’s practical—it doesn’t just say “you should be secure,” it shows you how to get there and what progress looks like. Unlike general maturity models, SAMM speaks the language of developers, product managers, and CISOs alike.
+
+| **Business Function** | **Security Practices (Examples)**                                    | **Focus**                                                                              | **Maturity Progression (Example)**                                                                                                                                              |
+| --------------------- | -------------------------------------------------------------------- | -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Governance**        | Strategy & Metrics<br>Policy & Compliance<br>Education & Guidance    | Establishing leadership, accountability, and direction for secure software development | **Level 1:** Basic awareness among developers<br>**Level 2:** Regular secure coding workshops<br>**Level 3:** Security champions embedded in Agile teams with measurable impact |
+| **Construction**      | Threat Assessment<br>Secure Architecture<br>Secure Build             | Integrating security early in design and coding to prevent flaws                       | Levels increase from ad hoc design reviews to standardized, automated secure build processes                                                                                    |
+| **Verification**      | Security Testing<br>Code Review<br>Security Assessment               | Ensuring software is tested and verified for security throughout development           | Levels progress from manual testing to automated, risk-driven, continuous verification                                                                                          |
+| **Deployment**        | Environment Hardening<br>Operational Enablement<br>Defect Management | Managing and maintaining security during release and post-deployment                   | Levels evolve from reactive patching to proactive monitoring, feedback, and continuous improvement                                                                              |
+
+
+Now, let’s talk about the **Ideal Model**, which comes from the Carnegie Mellon Software Engineering Institute just like CMM. **IDEAL** is an acronym that stands for Initiating, Diagnosing, Establishing, Acting, and Learning. Rather than being a static model that describes levels of maturity, the Ideal Model is more like a lifecycle or road map for improvement initiatives. You use it when you're launching a new security program or when you're trying to change something broken. 
+
+In the **Initiating** phase, you identify the need for improvement and secure sponsorship. Think of a CISO making the case to the board that security maturity needs to increase to meet industry compliance. 
+
+The **Diagnosing** phase is all about understanding the current state. This might involve running assessments, vulnerability scans, penetration tests, and stakeholder interviews. 
+
+In **Establishing**, you define the future state and create a plan to get there—this is your security roadmap. 
+
+Then, in **Acting**, you execute the plan. This includes implementing new policies, acquiring new tools, training staff, and changing behaviors. 
+
+Finally, in the **Learning** phase, you reflect on what worked, what didn’t, and use that feedback to start the cycle again. 
+
+IDEAL isn’t a scoring system like CMM or SAMM—it’s a method for driving meaningful change. That makes it especially useful in environments where security has been neglected or fragmented. It’s also a favorite of consultants because it provides structure to transformation efforts.
 
 To help you compare these three models quickly, here’s a table:
 
