Update 8.Q.1 Easy Questions.md

--- a/DOMAIN8: Software Development Security/8.Q.1 Easy Questions.md
+++ b/DOMAIN8: Software Development Security/8.Q.1 Easy Questions.md
@@ -1,2 +1,70 @@
 ## Easy Questions ##
 
+1. You are tasked with developing an application that needs to share various data types with other applications through APIs. Which data format would be the most suitable for this purpose?
+
+A. XML
+
+B. CSV
+
+C. JSON
+
+D. SPML
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ C. JSON
+
+Explanation:
+JSON (JavaScript Object Notation) is lightweight and supports multiple data types such as strings, numbers, arrays, and objects. It is easy to read and write for humans and is natively supported by JavaScript, making it an excellent choice for web applications and APIs. Its simplicity and efficiency make it the preferred format for data interchange between applications.
+
+Incorrect Answers:
+
+❌ A. XML:
+XML is more verbose and complex than JSON. While it supports schema validation and rich structure, it is heavier and slower to parse, which can be a drawback in performance-critical applications. It suits document-centric data better than lightweight data interchange.
+
+❌ B. CSV:
+CSV is primarily used for tabular data. It lacks support for complex data types, nested data, or hierarchical relationships, making it less versatile for sharing diverse data types.
+
+❌ D. SPML:
+SPML (Service Provisioning Markup Language) is designed specifically for provisioning and managing user identities and resources. It is not a general-purpose data format, making it less suitable for sharing various data types across multiple applications.
+
+</details>
+
+---
+
+2. In a high-security environment where protecting sensitive data is critical, which of the following container runtime security practices should be prioritized to prevent unauthorized access and ensure data privacy?
+
+A. Protecting all containers with MFA
+
+B. Using an AI-based Endpoint Detection and Response (EDR)
+
+C. Encrypting all data stored within containers using container runtime encryption
+
+D. Storing containers in different Physical or Virtual machines
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ C. Encrypting all data stored within containers using container runtime encryption
+
+Explanation:
+Runtime refers to the phase when a program is actively running within its environment. Encrypting data inside containers ensures that even if unauthorized access occurs, the data remains protected and unreadable without the decryption key. This directly safeguards data privacy and mitigates risks associated with unauthorized access—crucial in high-security environments.
+
+Incorrect Answers:
+
+❌ A. Protecting all containers with MFA:
+MFA enhances user authentication but does not protect data privacy during runtime.
+
+❌ B. Using an AI-based Endpoint Detection and Response (EDR):
+EDR focuses on detecting suspicious activities but does not directly secure data within containers. It’s a complementary measure rather than a primary method for runtime data protection.
+
+❌ D. Storing containers in different Physical or Virtual machines:
+Isolation can limit breach scope but is inefficient and does not inherently secure data inside containers.
+
+</details>
+
+---
+
